# riptide

./: .gitignore  .riptide_history  CNAME  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  config.lua  guide.html  reference.html  ripshell.html  rustfmt.toml  test.rip
.github/: dependabot.yml  main.workflow
.github/workflows/: ci.yml  dependabot-auto-merge.yml  publish-docs.yml  sponsors.yml
docs/: docinfo-footer.html  guide.adoc  index.html  manual.adoc  reference.adoc  ripshell.adoc  spec.adoc
native-modules/: Cargo.toml
riptide/: Cargo.toml
riptide/src/: ast.rs  builtins.rs  exceptions.rs  fd.rs  fibers.rs  filemap.rs  init.rip  interpreter.rs  lexer.rs  lib.rs  main.rs  modules.rs  parser.rs  paths.rs  prelude.rs  process.rs  reader.rs  rr.rs  runtime.rs  stdlib.rs  string.rs  table.rs  value.rs
riptide/src/builtins/: mod.rs
riptide/src/parse/: lexer.rs  mod.rs  parser.rs
riptide/src/parser/: mod.rs  scanner.rs
riptide/src/runtime/: mod.rs  scope.rs
riptide/src/runtime/value/: mod.rs
riptide/src/stdlib/: lang.rs  mod.rs  process.rs  string.rs
riptide/src/value/: mod.rs  string.rs  table.rs
runtime/: Cargo.toml
runtime/src/: builtins.rs  closure.rs  controlflow.rs  eval.rs  exceptions.rs  fd.rs  fiber.rs  foreign.rs  init.rip  init.rt  lib.rs  macros.rs  modules.rs  pipeline.rs  pipes.rs  process.rs  reactor.rs  runtime.rs  scope.rs  stdlib.rs  string.rs  table.rs  value.rs
runtime/src/io/: mod.rs  process.rs  unix.rs
runtime/src/modules/: mod.rs  native.rs
runtime/src/stdlib/: fs.rs  lang.rs  mod.rs  process.rs  string.rs
runtime/tests/: exit.rs
scripts/: publish-docs.sh
share/: sample-config.rt  sample_config.toml
shell/: Cargo.toml
shell/src/: buffer.rs  editor.rs  interactive.rt  logger.rs  main.rs  paths.rs  prompt.rs  raw.rs  session.rs  theme.rs
shell/src/completion/: history.rs  mod.rs
shell/src/editor/: command.rs  history_browser.rs  mod.rs  scene.rs
shell/src/history/: entry.rs  mod.rs  session.rs
shell/src/os/unix/: input.rs  output.rs
src/: buffer.rs  builtins.rs  editor.rs  exec.rs  execute.rs  exit.rs  expr.rs  functions.rs  globals.rs  history.rs  init.crush  init.lua  interpreter.rs  io.rs  lib.rs  logger.rs  macros.rs  main.rs  parser.rs  paths.rs  pipes.rs  runtime.rs  scanner.rs  shell.rs
src/builtins/: command.rs  exec.rs  exit.rs  help.rs  isatty.rs  mod.rs  pipe.rs  print.rs
src/editor/: event.rs  mod.rs
src/history/: entry.rs  mod.rs  session.rs
src/io/: mod.rs  pipes.rs  process.rs  reactor.rs
src/os/unix/: input.rs  output.rs
src/raw/: unix.rs
src/ripflow/: Cargo.toml  ast.rs  builtins.rs  filemap.rs  interpreter.rs  lib.rs  parser.rs  reader.rs  rr.rs  scanner.rs
src/riptide/: Cargo.toml  init.crush  interpreter.rs  io.rs  main.rs  parser.rs  scanner.rs
src/runtime/: builtins.rs  closure.rs  eval.rs  exceptions.rs  fiber.rs  foreign.rs  init.rip  io.rs  mod.rs  modules.rs  pipes.rs  process.rs  reactor.rs  runtime.rs  scope.rs  stdlib.rs  string.rs  table.rs  value.rs
src/runtime/stdlib/: process.rs
src/shell/: editor.rs  history.rs  mod.rs
src/shell/os/: mod.rs
src/shell/os/unix/: input.rs  mod.rs  output.rs
src/shell/raw/: unix.rs
src/stdlib/: lang.rs  mod.rs  process.rs  string.rs
stdlib/: Cargo.toml
stdlib/src/: fs.rs  init.rip  init.rt  lang.rs  lib.rs  process.rs  string.rs  strings.rs
syntax/: Cargo.toml
syntax-extra/: Cargo.toml
syntax-extra/src/: lib.rs  xml.rs
syntax/src/: ast.rs  error.rs  errors.rs  filemap.rs  grammar.pest  grammar.rs  lexer.rs  lib.rs  parser.rs  source.rs  tokens.rs
syntax/tests/: parser.rs
syntax/tests/parser/: block-named-params.toml  block-named-params.yaml  block-syntax.toml  block-syntax.yaml  block-varargs.toml  block-varargs.yaml  import.toml  import.yaml  list-literal.toml  list-literal.yaml  nested-blocks.toml  nested-blocks.yaml  nested-function-calls.test  nested-function-calls.toml  nested-function-calls.yaml  nested_function_calls.test  newline-escapes.toml  newline-escapes.yaml  number-literals.toml  number-literals.yaml  simple-pipeline.toml  simple-pipeline.yaml  single-quoted-string-literal.toml  single-quoted-string-literal.yaml  string-escapes.toml  string-escapes.yaml  string.test  table-literal.toml  table-literal.yaml  variable-paths.toml  variable-paths.yaml
syntax/tests/parser/basic-syntax/: block-named-params.test  block-named-params.toml  block-syntax.test  block-syntax.toml  double-quoted-string.toml  function-call.test  function-call.toml  nested-blocks.test  nested-blocks.toml  newline-escapes.toml  number-literals.test  number-literals.toml  simple-pipeline.test  simple-pipeline.toml  single-quoted-string-literal.test  single-quoted-string-literal.toml  string-escapes.toml  string.test
syntax/tests/parser/interpolation/: bare.toml  complex-substitution.toml  complex-substitution.yaml  double-quoted-string.toml  double-quoted-string.yaml  format.toml  pipeline.toml  substitution.toml  substitution.yaml
syntax/tests/parser/substitution/: bare.toml  bare.yaml  format.toml  format.yaml  pipeline.toml  pipeline.yaml
testing/: Cargo.toml
testing/src/: lib.rs
tests/: exit.rs
themes/: default.toml
tools/astdump/: Cargo.toml
tools/astdump/src/: main.rs
