[package]
name = "riptide"
version = "0.2.0"
authors = ["Stephen M. Coakley <me@stephencoakley.com>"]
description = "The Riptide programming language interpreter"
edition = "2018"

[dependencies]
atty = "0.2"
bstr = "0.2"
clipboard = "0.5"
directories = "2.0"
exitcode = "1.1"
futures = "0.3"
mio = "0.6"
nix = "0.17"
slab = "0.4"
structopt = "0.3" # arg parsing

[dependencies.log]
version = "0.4"
features = ["std"]

[dependencies.log-panics]
version = "2.0"
features = ["with-backtrace"]

[dependencies.riptide-syntax]
path = "syntax"

[dependencies.rusqlite]
version = "0.20"
features = ["bundled"]

[dependencies.tokio]
version = "0.2"
features = [
    "io-driver",
    "io-util",
    "macros",
    "process",
    "rt-core",
    "signal",
]

[target.'cfg(unix)'.dependencies]
termios = "0.3"
vte = "0.3" # parsing user input

[workspace]
members = ["syntax"]
