[package]
name = "riptide"
version = "0.2.0"
authors = ["Stephen M. Coakley <me@stephencoakley.com>"]
description = "The Riptide programming language interpreter"
edition = "2018"

[dependencies]
atty = "0.2"
clipboard = "0.5"
directories = "2.0"
exitcode = "1.1"
futures = "0.3"
lazy_static = "1"
structopt = "0.3"

[dependencies.log]
version = "0.4"
features = ["std"]

[dependencies.log-panics]
version = "2.0"
features = ["with-backtrace"]

[dependencies.riptide-runtime]
path = "runtime"

[dependencies.riptide-stdlib]
path = "stdlib"

[dependencies.rusqlite]
version = "0.21"
features = ["bundled"]

[dependencies.tokio]
version = "0.2"
features = [
    "io-driver",
    "io-util",
    "macros",
    "process",
    "rt-core",
    "signal",
]

[target.'cfg(unix)'.dependencies]
termios = "0.3"
vte = "0.7" # parsing user input

[workspace]
members = ["runtime", "stdlib", "syntax"]
