[workspace]
resolver = "2"
members = ["runtime", "shell", "stdlib", "syntax"]
default-members = ["shell"]

[workspace.package]
version = "0.2.0"
authors = ["Stephen M. Coakley <me@stephencoakley.com>"]
license = "MIT"
edition = "2021"

# Dependency versions used by multiple crates.
[workspace.dependencies]
dirs = "5.0"
directories = "5.0"
log = "0.4"
regex = "1.10"
scopeguard = "1.2"
serde = "1"
tokio = "1.2"
