[package]
name = "riptide"
version = "0.2.0"
authors = ["Stephen M. Coakley <me@stephencoakley.com>"]
description = "The Riptide language interpreter"
edition = "2018"

[dependencies]
bytes = "0.4"
fnv = "1.0"
itertools = "0.7"
log = "0.4"
nix = "0.12"
utf-8 = "0.7"

[dependencies.riptide-syntax]
path = "../syntax"
