[package]
name = "riptide"
version = "0.2.0"
authors = ["Stephen M. Coakley <me@stephencoakley.com>"]
description = "The Riptide language interpreter"
edition = "2018"

[dependencies]
auto_enums = "0.3"
bytes = "0.4"
itertools = "0.8"
libc = "0.2"
log = "0.4"
nix = "0.13"
utf-8 = "0.7"

[dependencies.riptide-syntax]
path = "../syntax"
