[package]
name = "riptide-runtime"
version = "0.2.0"
authors = ["Stephen M. Coakley <me@stephencoakley.com>"]
description = "The Riptide programming language interpreter"
edition = "2018"

[dependencies]
async-recursion = "0.3"
atty = "0.2"
bstr = "1.1"
directories = "3.0"
futures = "0.3"
log = "0.4"
nix = "0.17"
regex = "1.3"
scopeguard = "1.1"
tokio-pipe = "0.2"

[dependencies.gc]
version = "0.4.0"
features = ["derive"]

[dependencies.riptide-syntax]
path = "../syntax"

[dependencies.tokio]
version = "1.2"
features = [
    "fs",
    "io-std",
    "io-util",
    "macros",
    "process",
    "rt",
    "signal",
]
