[package]
name = "riptide-runtime"
version = "0.2.0"
authors = ["Stephen M. Coakley <me@stephencoakley.com>"]
description = "The Riptide programming language interpreter"
edition = "2021"
rust-version = "1.70.0"

[dependencies]
async-recursion = "1.0"
bstr = "1.9"
directories = "3.0"
futures = "0.3"
log = "0.4"
regex = "1.10"
scopeguard = "1.2"
tokio-pipe = "0.2"

[dependencies.gc]
version = "0.4.0"
features = ["derive"]

[dependencies.nix]
version = "0.27"
features = ["fs", "process"]

[dependencies.riptide-syntax]
path = "../syntax"

[dependencies.tokio]
version = "1.2"
features = [
    "fs",
    "io-std",
    "io-util",
    "macros",
    "process",
    "rt",
    "signal",
]
