[package]
name = "riptide-runtime"
description = "The Riptide programming language interpreter"
rust-version = "1.75.0"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
async-recursion = "1.0"
bstr = "1.9"
dirs.workspace = true
futures = "0.3"
log.workspace = true
regex.workspace = true
riptide-syntax.path = "../syntax"
scopeguard.workspace = true
tokio-pipe = "0.2"

[dependencies.gc]
version = "0.5.0"
features = ["derive"]

[dependencies.nix]
version = "0.27"
features = ["fs", "process"]

[dependencies.tokio]
workspace = true
features = [
    "fs",
    "io-std",
    "io-util",
    "macros",
    "process",
    "rt",
    "signal",
]
