[package]
name = "riptide-shell"
version = "0.2.0"
authors = ["Stephen M. Coakley <me@stephencoakley.com>"]
description = "The Riptide programming language interpreter"
edition = "2021"

[dependencies]
clipboard = "0.5"
directories = "3.0"
exitcode = "1.1"
flume = "0.11"
futures = "0.3"
scopeguard = "1.2"
syslog = "6"
toml = "0.8"
yansi = "0.5"

[dependencies.clap]
version = "4.4"
features = ["derive"]

[dependencies.log]
version = "0.4"
features = ["std"]

[dependencies.log-panics]
version = "2.1"
features = ["with-backtrace"]

[dependencies.riptide-runtime]
path = "../runtime"

[dependencies.riptide-stdlib]
path = "../stdlib"

[dependencies.rusqlite]
version = "0.25"
features = ["bundled"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1.2"
features = [
    "io-util",
    "process",
    "rt",
    "signal",
]

[target.'cfg(unix)'.dependencies]
termios = "0.3"
vte = "0.13" # parsing user input
