[package]
name = "riptide-shell"
description = "The Riptide programming language interpreter"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
directories.workspace = true
exitcode = "1.1"
flume = "0.11"
futures = "0.3"
riptide-runtime.path = "../runtime"
riptide-stdlib.path = "../stdlib"
scopeguard.workspace = true
syslog = "6"
toml = "0.8"
yansi = "0.5"

[dependencies.clap]
version = "4.4"
features = ["derive"]

[dependencies.log]
workspace = true
features = ["std"]

[dependencies.log-panics]
version = "2.1"
features = ["with-backtrace"]

[dependencies.rusqlite]
version = "0.30"
features = ["bundled"]

[dependencies.serde]
workspace = true
features = ["derive"]

[dependencies.tokio]
workspace = true
features = [
    "io-util",
    "process",
    "rt",
    "signal",
]

[target.'cfg(unix)'.dependencies]
termios = "0.3"
vte = "0.13" # parsing user input
