[package]
name = "riptide-shell"
description = "The Riptide programming language interpreter"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
clap-verbosity-flag = "2"
directories.workspace = true
exitcode = "1.1"
owo-colors = "4"
riptide-runtime.path = "../runtime"
riptide-stdlib.path = "../stdlib"
scopeguard.workspace = true
toml = "0.8"

[dependencies.clap]
version = "4.5"
features = ["derive"]

[dependencies.log]
workspace = true
features = ["std"]

[dependencies.log-panics]
version = "2.1"
features = ["with-backtrace"]

[dependencies.rusqlite]
version = "0.30"
features = ["bundled"]

[dependencies.serde]
workspace = true
features = ["derive"]

[dependencies.tokio]
workspace = true
features = [
    "io-util",
    "process",
    "rt",
    "signal",
]

[target.'cfg(unix)'.dependencies]
termios = "0.3"
vte = "0.13" # parsing user input
