[package]
name = "riptide-stdlib"
version = "0.2.0"
authors = ["Stephen M. Coakley <me@stephencoakley.com>"]
description = "The Riptide standard library"
edition = "2018"

[dependencies]
glob = "0.3"
log = "0.4"

[dependencies.riptide-runtime]
path = "../runtime"

[dependencies.tokio]
version = "1.0"
features = [
    "fs",
    "io-util",
    "process",
    "time",
]
