[package]
name = "riptide-stdlib"
description = "The Riptide standard library"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
glob = "0.3"
log.workspace = true
riptide-runtime.path = "../runtime"

[dependencies.tokio]
workspace = true
features = [
    "fs",
    "io-util",
    "process",
    "time",
]
