[package]
name = "riptide-syntax"
version = "0.2.0"
authors = ["Stephen M. Coakley <me@stephencoakley.com>"]
description = "The Riptide language parser"
edition = "2021"

[dependencies]
pest = "2.7"
pest_derive = "2.7"
regex-syntax = "0.8"

[dev-dependencies]
difference = "2.0"
glob = "0.3"
log = "0.4"
stderrlog = "0.6"
test-generator = "0.3"
toml = "0.5"

[dev-dependencies.serde]
version = "1"
features = ["derive"]
