[package]
name = "riptide-syntax"
description = "The Riptide language parser"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
pest = "2.7"
pest_derive = "2.7"
regex-syntax = "0.8"

[dev-dependencies]
difference = "2.0"
glob = "0.3"
log.workspace = true
stderrlog = "0.6"
test-generator = "0.3"
toml = "0.8"

[dev-dependencies.serde]
workspace = true
features = ["derive"]
