[package]
name = "riptide-syntax"
description = "The Riptide language parser"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
pest = "2.7"
pest_derive = "2.7"
regex.workspace = true

[dev-dependencies]
difference = "2.0"
glob = "0.3"
log.workspace = true
stderrlog = "0.6"
serde_yaml = "0.9"
test-generator = "0.3"

[dev-dependencies.serde]
workspace = true
features = ["derive"]
